# NeoSysX

./: CMakeLists.txt
kernel/: CMakeLists.txt
kernel/common/: CMakeLists.txt
kernel/common/include/: main.h
kernel/common/include/cpu/: halt.h  intr.h
kernel/common/include/io/: ansi_terminal.h  terminal.h
kernel/common/include/kernel/: log.h  main.h  panic.h
kernel/common/include/mm/: pmm.h  vmm.h
kernel/common/include/timing/: timer.h
kernel/common/src/: main.c  panic.c
kernel/common/src/cpu/: halt.c
kernel/common/src/io/: terminal.c
kernel/common/src/io/ansi_terminal/: read.c  read_available.c  write.c  write_available.c
kernel/common/src/kernel/: main.c  panic.c
kernel/common/src/mm/: pmm.c  vmm.c
kernel/common/src/timing/: timer.c
kernel/cpu/: CMakeLists.txt
kernel/cpu/i386/: CMakeLists.txt
kernel/cpu/i386/include/cpu/i386/: gdt.h  idt.h  init.h  pmm.h  vmm.h
kernel/cpu/i386/src/: gdt.c  gdt.s  idt.c  idt.s  idt_exceptions.c  idt_handler.c  idt_struct.c  init.c  intr.s  pmm.c  reset.c  trace.c  vmm.s  vmm_init.c  vmm_lh.c  vmm_ops.c
kernel/cpu/x86_common/: CMakeLists.txt
kernel/cpu/x86_common/include/cpu/x86_common/: io.h
kernel/cpu/x86_common/src/: halt.c
kernel/drivers/: CMakeLists.txt
kernel/drivers/acpi/: CMakeLists.txt
kernel/drivers/acpi/acpi_common/: CMakeLists.txt
kernel/drivers/acpi/acpi_common/include/drivers/acpi/: acpi.h
kernel/drivers/acpi/acpi_common/src/: acpi.c
kernel/drivers/acpi/uacpi/: CMakeLists.txt
kernel/drivers/acpi/uacpi/include/: uacpi_libc.h
kernel/drivers/acpi/uacpi/src/: init.c  kernel_api.c
kernel/drivers/uart/: CMakeLists.txt
kernel/drivers/uart/16550/: CMakeLists.txt
kernel/drivers/uart/16550/include/drivers/uart/: 16550.h
kernel/drivers/uart/16550/src/: config.c  fifo.c  irq.c  line.c  loopback.c  modem.c  rx_ops.c  status.c  tests.c  tx_ops.c
kernel/drivers/uart/16550/src/mmio/: mmio16.c  mmio32.c  mmio64.c  mmio8.c
kernel/drivers/uart/16550_term/: CMakeLists.txt
kernel/drivers/uart/16550_term/include/drivers/uart/: 16550_term.h
kernel/drivers/uart/16550_term/src/: 16550_term.c
kernel/machine/: CMakeLists.txt
kernel/machine/i386-pc/: CMakeLists.txt
kernel/machine/i386-pc/include/machine/i386-pc/: init.h  pmm.h
kernel/machine/i386-pc/src/: init.c  pmm.c
kernel/machine/pc_common/: CMakeLists.txt
kernel/machine/pc_common/drivers/: CMakeLists.txt
kernel/machine/pc_common/drivers/acpi/: CMakeLists.txt
kernel/machine/pc_common/drivers/acpi/acpi_pc/: CMakeLists.txt
kernel/machine/pc_common/drivers/acpi/acpi_pc/include/drivers/acpi/: acpi_pc.h
kernel/machine/pc_common/drivers/acpi/acpi_pc/src/: acpi_pc.c
kernel/machine/pc_common/drivers/intr/: CMakeLists.txt
kernel/machine/pc_common/drivers/intr/i8259/: CMakeLists.txt
kernel/machine/pc_common/drivers/intr/i8259/include/drivers/intr/: i8259.h
kernel/machine/pc_common/drivers/intr/i8259/src/: i8259_isr.c  i8259_ops.c
kernel/machine/pc_common/drivers/timer/: CMakeLists.txt
kernel/machine/pc_common/drivers/timer/i8253/: CMakeLists.txt
kernel/machine/pc_common/drivers/timer/i8253/include/drivers/timer/: i8253.h
kernel/machine/pc_common/drivers/timer/i8253/src/: i8253.c
kernel/machine/pc_common/drivers/uart/: CMakeLists.txt
kernel/machine/pc_common/drivers/uart/16550_pc/: CMakeLists.txt
kernel/machine/pc_common/drivers/uart/16550_pc/include/drivers/uart/: 16550_pc.h
kernel/machine/pc_common/drivers/uart/16550_pc/src/: 16550_pc.c
kernel/machine/pc_common/drivers/video/: CMakeLists.txt
kernel/machine/pc_common/drivers/video/vga_text/: CMakeLists.txt
kernel/machine/pc_common/drivers/video/vga_text/include/drivers/video/: vga_text.h
kernel/machine/pc_common/drivers/video/vga_text/src/: terminal.c  tty.c  vga_text.c
kernel/targets/: CMakeLists.txt
kernel/targets/i386-pc-multiboot/: CMakeLists.txt  link.ld
kernel/targets/i386-pc-multiboot/include/: multiboot.h
kernel/targets/i386-pc-multiboot/include/i386-pc-multiboot/: multiboot.h  multiboot_spec.h
kernel/targets/i386-pc-multiboot/src/: boot.s  init.c  multiboot.c  multiboot_spec.c  pmm.c  vmm.c
libc/: CMakeLists.txt
libc/include/: printf_config.h  stdio.h  string.h
libc/src/stdio/: putchar.c
libc/src/string/: memchr.c  memcmp.c  memcpy.c  memmove.c  memset.c  strcat.c  strchr.c  strcmp.c  strcpy.c  strlen.c  strncat.c  strncmp.c  strncpy.c  strnlen.c  strrchr.c
targets/i386-pc-multiboot/: CMakeLists.txt  grub.cfg  menu.lst
toolchains/: common.cmake  x86.cmake
